--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node server.js"
+    "dev": "nodemon --exec babel-node server.js",
+    "migrate": "npx prisma migrate dev --preview-feature"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,10 @@
   },
   "homepage": "https://github.com/techighpark/instaclone_recap2#readme",
   "dependencies": {
-    "apollo-server": "^3.6.1",
-    "graphql": "^16.2.0"
+    "@prisma/client": "^3.8.1",
+    "apollo-server": "^2.25.2",
+    "apollo-server-core": "^3.6.1",
+    "graphql": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
