--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^3.8.1",
     "apollo-server": "^2.25.2",
     "apollo-server-core": "^3.6.1",
+    "dotenv": "^12.0.4",
     "graphql": "^15.8.0",
     "graphql-tools": "^8.2.0"
   },
